修复108个bug: 8Critical+25High+47Medium+28Low - 安全漏洞/并发超卖/事务一致性/XSS/SQL注入/内存泄漏/输入校验等全面修复